--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -9,11 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>blaze-notify-template</artifactId>
+    <artifactId>blaze-notify-notification</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>api</module>
-        <module>freemarker</module>
     </modules>
 
 
