--- a/template/api/pom.xml
+++ b/template/api/pom.xml
@@ -3,18 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>blaze-notify</artifactId>
+        <artifactId>blaze-notify-template</artifactId>
         <groupId>com.blazebit</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>blaze-notify-template</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>api</module>
-        <module>freemarker</module>
-    </modules>
+    <artifactId>blaze-notify-template-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>blaze-notify-notification-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
