--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>api</module>
         <module>impl</module>
+        <module>persistence</module>
     </modules>
 
 </project>
