fix #9 interval literals

--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -20,6 +20,7 @@
         <module>testsuite</module>
         <module>receiver-resolver</module>
         <module>message-resolver</module>
+        <module>schedule-cron</module>
     </modules>
 
 </project>
