--- a/notification/schedule/pom.xml
+++ b/notification/schedule/pom.xml
@@ -3,23 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>blaze-notify-parent</artifactId>
+        <artifactId>blaze-notify-notification</artifactId>
         <groupId>com.blazebit</groupId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>blaze-notify-notification</artifactId>
+    <artifactId>blaze-notify-notification-schedule</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>api</module>
-        <module>channel</module>
-        <module>processor</module>
-        <module>scheduler</module>
-        <module>testsuite</module>
-        <module>receiver-resolver</module>
-        <module>schedule</module>
+        <module>cron</module>
+        <module>spring</module>
     </modules>
+
 
 </project>
