--- a/notification/schedule/spring/pom.xml
+++ b/notification/schedule/spring/pom.xml
@@ -3,25 +3,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>blaze-notify-template</artifactId>
+        <artifactId>blaze-notify-notification-schedule</artifactId>
         <groupId>com.blazebit</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>blaze-notify-template-freemarker</artifactId>
+    <artifactId>blaze-notify-notification-schedule-spring</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>blaze-notify-template-api</artifactId>
+            <artifactId>blaze-notify-notification-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.freemarker</groupId>
-            <artifactId>freemarker</artifactId>
-            <version>2.3.28</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${version.spring}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
 </project>
