rename receiver -> recipient

--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -18,7 +18,7 @@
         <module>processor</module>
         <module>scheduler</module>
         <module>testsuite</module>
-        <module>receiver-resolver</module>
+        <module>recipient-resolver</module>
         <module>schedule</module>
     </modules>
 
