update javax.mail dependency

--- a/notification/channel/smtp/pom.xml
+++ b/notification/channel/smtp/pom.xml
@@ -27,9 +27,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4.7</version>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
             <scope>provided</scope>
         </dependency>
 
