--- a/domain/declarative/persistence/pom.xml
+++ b/domain/declarative/persistence/pom.xml
@@ -3,21 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>blaze-notify-parent</artifactId>
+        <artifactId>blaze-notify-domain-declarative</artifactId>
         <groupId>com.blazebit</groupId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../parent/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>blaze-notify-domain</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>api</module>
-        <module>impl</module>
-        <module>persistence</module>
-        <module>declarative</module>
-    </modules>
+    <artifactId>blaze-notify-domain-declarative-persistence</artifactId>
 
 </project>
