--- a/actor/declarative/api/pom.xml
+++ b/actor/declarative/api/pom.xml
@@ -3,23 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>blaze-notify-parent</artifactId>
+        <artifactId>blaze-notify-actor-declarative</artifactId>
         <groupId>com.blazebit</groupId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../parent/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>blaze-notify-actor</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>blaze-notify-actor-declarative-api</artifactId>
 
-    <modules>
-        <module>api</module>
-        <module>impl</module>
-        <module>scheduler</module>
-        <module>clustering</module>
-        <module>consumer</module>
-        <module>declarative</module>
-    </modules>
-
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>blaze-notify-actor-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
