--- a/actor/declarative/pom.xml
+++ b/actor/declarative/pom.xml
@@ -3,23 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>blaze-notify-parent</artifactId>
+        <artifactId>blaze-notify-actor</artifactId>
         <groupId>com.blazebit</groupId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../parent/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>blaze-notify-actor</artifactId>
+    <artifactId>blaze-notify-actor-declarative</artifactId>
     <packaging>pom</packaging>
 
     <modules>
         <module>api</module>
         <module>impl</module>
-        <module>scheduler</module>
-        <module>clustering</module>
-        <module>consumer</module>
-        <module>declarative</module>
+        <module>integration</module>
     </modules>
 
 </project>
