Add some basic tests and fix small scheduler issues

--- a/job/pom.xml
+++ b/job/pom.xml
@@ -21,6 +21,7 @@
         <module>processor</module>
         <module>schedule</module>
         <module>transaction</module>
+        <module>testsuite</module>
     </modules>
 
 </project>
