[#13] Implement Slack channnel

--- a/notification/channel/pom.xml
+++ b/notification/channel/pom.xml
@@ -17,6 +17,7 @@
         <module>memory</module>
         <module>smtp</module>
         <module>ses</module>
+        <module>slack</module>
     </modules>
 
 </project>
