--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.blazebit</groupId>
         <artifactId>blazebit-parent</artifactId>
@@ -27,7 +25,7 @@
     </modules>
 
     <artifactId>blaze-notify</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-Alpha1</version>
 
     <name>Blazebit Blaze-Notify</name>
     <url>https://persistence.blazebit.com</url>
@@ -67,7 +65,7 @@
         <connection>scm:git:git@github.com:Blazebit/blaze-notify.git</connection>
         <developerConnection>scm:git:git@github.com:Blazebit/blaze-notify.git</developerConnection>
         <url>git@github.com:Blazebit/blaze-notify.git</url>
-        <tag>HEAD</tag>
+        <tag>1.0.0-Alpha1</tag>
     </scm>
 
     <developers>
