--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </modules>
 
     <artifactId>blaze-notify</artifactId>
-    <version>1.0.0-Alpha2</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <name>Blazebit Blaze-Notify</name>
     <url>https://persistence.blazebit.com</url>
@@ -65,7 +65,7 @@
         <connection>scm:git:git@github.com:Blazebit/blaze-notify.git</connection>
         <developerConnection>scm:git:git@github.com:Blazebit/blaze-notify.git</developerConnection>
         <url>git@github.com:Blazebit/blaze-notify.git</url>
-        <tag>1.0.0-Alpha2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
