--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -37,6 +37,11 @@
                 <version>7.0</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>javax.json</groupId>
+                <artifactId>javax.json-api</artifactId>
+                <version>1.1</version>
+            </dependency>
 
             <!-- Test -->
             <dependency>
