--- a/jpa/model/expression/pom.xml
+++ b/jpa/model/expression/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>blaze-notify-jpa-model-base</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-jpamodelgen</artifactId>
+            <version>${version.hibernate}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Test dependencies -->
 		<dependency>
