--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -19,8 +19,8 @@
 
         <version.blaze-utils>0.1.19</version.blaze-utils>
         <version.blaze-persistence>1.4.0</version.blaze-persistence>
-        <version.blaze-job>1.0.0-Alpha5</version.blaze-job>
-        <version.blaze-actor>1.0.0-Alpha3</version.blaze-actor>
+        <version.blaze-job>1.0.1</version.blaze-job>
+        <version.blaze-actor>1.0.0-Alpha5</version.blaze-actor>
         <version.blaze-expression>1.0.0-Alpha5</version.blaze-expression>
         <version.blaze-domain>1.0.0-Alpha3</version.blaze-domain>
         <version.weld>2.4.5.Final</version.weld>
