Expose ServiceProvider to Channel and TemplateProcessor

--- a/template/api/pom.xml
+++ b/template/api/pom.xml
@@ -10,4 +10,11 @@
 
     <artifactId>blaze-notify-template-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.blazebit</groupId>
+            <artifactId>blaze-job-core-api</artifactId>
+            <version>${version.blaze-job}</version>
+        </dependency>
+    </dependencies>
 </project>
