--- a/channel/smtp/src/test/resources/healthcheck.properties
+++ b/channel/smtp/src/test/resources/healthcheck.properties
@@ -14,13 +14,20 @@
 #  KIND, either express or implied.  See the License for the
 #  specific language governing permissions and limitations
 #  under the License.
-#
 
 #  This template file can be used as example for James Server configuration
 #  DO NOT USE IT AS SUCH AND ADAPT IT TO YOUR NEEDS
 
-# Read https://james.apache.org/server/config-system.html#jmx.properties for further details
+# Configuration file for Periodical Health Checks
 
-jmx.enabled=true
-jmx.address=127.0.0.1
-jmx.port=9999
+# Read https://james.apache.org/server/config-healthcheck.html for further details
+
+# Optional. Period between two PeriodicalHealthChecks.
+# Units supported are (ms - millisecond, s - second, m - minute, h - hour, d - day). Default unit is millisecond.
+# Default duration is 60 seconds.
+# Duration must be greater or at least equals to 10 seconds.
+# healthcheck.period=60s
+
+# List of fully qualified HealthCheck class names in addition to James' default healthchecks.
+# Healthchecks need to be located within the classpath or in the ./extensions-jars folder.
+# additional.healthchecks=
