--- a/jpa/model/base/pom.xml
+++ b/jpa/model/base/pom.xml
@@ -11,10 +11,9 @@
     <artifactId>blaze-notify-jpa-model-base</artifactId>
 
     <dependencies>
-        <!-- Actually we only need JPA but since there is no official artifact we rather use this than provider specific apis -->
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
