--- a/channel/smtp/src/test/resources/webadmin.properties
+++ b/channel/smtp/src/test/resources/webadmin.properties
@@ -18,6 +18,39 @@
 #  This template file can be used as example for James Server configuration
 #  DO NOT USE IT AS SUCH AND ADAPT IT TO YOUR NEEDS
 
+# Read https://james.apache.org/server/config-webadmin.html for further details
+
 enabled=true
 port=8000
+# Use host=0.0.0.0 to listen on all addresses
 host=localhost
+
+# Defaults to false
+https.enabled=false
+
+# Compulsory when enabling HTTPS
+#https.keystore=/path/to/keystore
+#https.password=password
+
+# Optional when enabling HTTPS (self signed)
+#https.trust.keystore
+#https.trust.password
+
+# Defaults to false
+#jwt.enabled=true
+#
+## If you wish to use OAuth authentication, you should provide a valid JWT public key.
+## The following entry specify the link to the URL of the public key file,
+## which should be a PEM format file.
+##
+#jwt.publickeypem.url=file://conf/jwt_publickey
+
+# Defaults to false
+#cors.enable=true
+#cors.origin
+
+
+# List of fully qualified class names that should be exposed over webadmin
+# in addition to your product default routes. Routes needs to be located
+# within the classpath or in the ./extensions-jars folder.
+#extensions.routes=
